--- a/std/pubspec.yaml
+++ b/std/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.6
+  image_picker: ^0.8.2
+  google_maps_flutter: ^2.0.6
+  geolocator: ^7.3.0
+  geocoding: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,6 +37,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.1"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -43,6 +54,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/defaultimage.jpg
+    - assets/logo.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
