--- a/std/pubspec.yaml
+++ b/std/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   google_maps_flutter: ^2.0.6
   geolocator: ^7.3.0
   geocoding: ^2.0.0
+  firebase_core: ^1.4.0
+  cloud_firestore: ^2.4.0
+  firebase_database: ^7.1.2
+  firebase: ^9.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
