--- a/std/pubspec.yaml
+++ b/std/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^2.4.0
   firebase_database: ^7.1.2
   firebase: ^9.0.1
+  scoped_model: ^2.0.0-nullsafety.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
