--- a/std/android/app/src/main/AndroidManifest.xml
+++ b/std/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
       <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="std"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/launcher_icon">
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyCRHJmPkXyw7LrDWS5VqHkQFv2gIVUIfu8"/>
