--- a/std/pubspec.yaml
+++ b/std/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase: ^9.0.1
   scoped_model: ^2.0.0-nullsafety.0
   http: ^0.13.3
+  firebase_auth: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
